# cpp-sdk

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  test.cpp  test_autoposter.cpp  topgg.rc
.github/workflows/: test.yml
cmake/: FindDPP.cmake
docs/: Doxyfile  header.html
include/topgg/: client.h  export.h  models.h  result.h  topgg.h
include/topgg/webhooks/: cpp-httplib.h  drogon.h  models.h
src/: client.cpp  models.cpp  result.cpp
src/webhooks/: cpp-httplib.cpp  drogon.cpp  models.cpp
tests/: CMakeLists.txt  test_api.cpp  test_autoposter.cpp  test_bot_autoposter.cpp
tests/cpp-httplib-webhooks/: test_vote.cpp
tests/drogon-webhooks/: test_vote.cpp
